--- a/invenio_requests/templates/semantic-ui/invenio_notifications/comment-request-event.create.jinja
+++ b/invenio_requests/templates/semantic-ui/invenio_notifications/comment-request-event.create.jinja
@@ -12,22 +12,37 @@
     ui=config.SITE_UI_URL, id=request_id
     )
 %}
+{% set account_settings_link = "{ui}/account/settings/notifications".format(
+    ui=config.SITE_UI_URL
+    )
+%}
 
 {%- block subject -%}
-{{ _("New comment on '{request_title}'").format(request_title=request_title) }}
+{{ _("💬 New comment on '{request_title}'").format(request_title=request_title) }}
 {%- endblock subject -%}
 
 {%- block html_body -%}
-<p>
-    {{ _("'{user_name}' commented on '{request_title}'").format(user_name=event_creator_name, request_title=request_title) }}.
-</p>
-{{ request_event_content }}
-
-<a href="{{ request_link }}" class="button"> {{ _("Check out the request") }}</a>
+<table style="font-family:'Lato',Helvetica,Arial,sans-serif;border-spacing:15px">
+    <tr>
+        <td>{{ _("<b>@{user_name}</b> commented on <b>{request_title}</b>:").format(user_name=event_creator_name, request_title=request_title) }}</td>
+    </tr>
+    <tr>
+        <td><em>"{{ request_event_content }}"</em></td>
+    </tr>
+    <tr>
+        <td><a href="{{ request_link }}" class="button">{{ _("Check out the request")}}</a></td>
+    </tr>
+    <tr>
+        <td><strong>_</strong></td>
+    </tr>
+    <tr>
+        <td style="font-size:smaller">{{ _("This is an auto-generated message. To manage notifications, visit your")}} <a href="{{account_settings_link}}">{{ _("account settings")}}</a>.</td>
+    </tr>
+</table>
 {%- endblock html_body %}
 
 {%- block plain_body -%}
-{{ _("'{user_name}' commented on '{request_title}'").format(user_name=event_creator_name, request_title=request_title) }}.
+{{ _("@{user_name} commented on '{request_title}'").format(user_name=event_creator_name, request_title=request_title) }}.
 
 {{ request_event_content }}
 
@@ -37,7 +52,7 @@
 
 {# Markdown for Slack/Mattermost/chat #}
 {%- block md_body -%}
-{{ _("*{user_name}* commented on *{request_title}*").format(user_name=event_creator_name, request_title=request_title) }}.
+{{ _("*@{user_name}* commented on *{request_title}*").format(user_name=event_creator_name, request_title=request_title) }}.
 
 {{ request_event_content }}
 
